--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -260,9 +260,9 @@
   "components": "Components",
   "addComponent": "Add Component",
   "addComponents": "Add Components",
-  "componentsNoWebhook": "Components need a certain type of webhook to work properly. For link buttons, the webhook must be owned by a bot, but for regular buttons and select menus, the webhook must be owned by the Discohook application (this website/its bot). Add a webhook for more information.",
-  "componentsPossibleWebhook": "One or more of your webhooks are owned by an app, but not Discohook, so you can only add link buttons. Add a webhook owned by the Discohook bot to be able to use more types of components.",
-  "componentsNoUsableWebhook": "None of your webhooks are compatibile with components. Add a webhook owned by the Discohook bot.",
+  "componentsNoWebhook": "You need a certain type of webhook to use components. For link buttons, the webhook must be owned by a bot, but for other buttons and select menus, the webhook must be owned by Discohook (Discohook Utils#4333). Add a webhook for more info.",
+  "componentsPossibleWebhook": "One or more of your webhooks are owned by an app, but not Discohook, so you can only use link buttons. Add a webhook owned by Discohook to use more types of components.",
+  "componentsNoUsableWebhook": "None of your webhooks are compatibile with components. Add a webhook owned by Discohook.",
   "component": {
     "1": "Row",
     "2": "Button",
