chore(site): clearer share url creation expiry

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -17,14 +17,14 @@
   "editBackupTitle": "Edit Backup Details",
   "editBackupMessages": "To edit the messages in a backup, click the <0/> button.",
   "saveMessageTitle": "Save Message",
-  "temporaryShareUrl": "Temporary Share URL",
+  "temporaryShareUrl": "Share URL",
+  "temporaryShareUrlExpires": "Share URL (expires <0>$t(timestamp.relative.days_future)</0>)",
   "shareExpired": "Invalid Share Link",
   "generate": "Generate",
   "copy": "Copy",
   "copyLink": "Copy Link",
   "clickGenerate": "Press \"Generate\" to generate a share link",
   "includeWebhookUrls": "Include webhook URLs",
-  "linkExpiresAt": "This link expires at {{time}} ({{relativeTime}}).",
   "options": "Options",
   "manageBackups": "Visit your user page to manage backups.",
   "logInToSaveBackups": "Log in to save permanent backups.",
