--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -83,6 +83,8 @@
   "previewAll": "Preview All",
   "saveMessage": "Save Message",
   "addMessage": "Add Message",
+  "jsonEditor": "JSON Editor",
+  "jsonPrettify": "Prettify JSON",
   "editResource": "Edit {{0}}",
   "removeResource": "Remove {{0}}",
   "use": "Use",
