feat(site): delete triggers

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -265,6 +265,8 @@
     "1": "A member leaves the server (or is removed)"
   },
   "backToTriggers": "Back to Triggers",
+  "deleteTrigger": "Delete Trigger",
+  "deleteTriggerConfirm": "Are you sure you want to delete $t(triggerEvent.{{0}}) and its flow?",
   "information": "Information",
   "havingTrouble": "Having Trouble?",
   "troubleshootMessage": "If you press the send button and nothing happens, it may be because your browser is blocking connections to Discord, which is not uncommon for privacy-focused extensions like Privacy Badger. Try disabling privacy extensions or entering incognito/private mode.",
