feat(site): developer button, copy query data

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -84,8 +84,10 @@
   "previewAll": "Preview All",
   "saveMessage": "Save Message",
   "addMessage": "Add Message",
+  "developer": "Developer",
   "jsonEditor": "JSON Editor",
   "jsonPrettify": "Prettify JSON",
+  "copyQueryData": "Copy Query Data",
   "editResource": "Edit {{0}}",
   "removeResource": "Remove {{0}}",
   "use": "Use",
