feat(site): better reset editor button

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -424,8 +424,7 @@
   "noHistory": "This editor session has no history recorded.",
   "historyNote": "Here you can view and manage the past 15 autosaved instances of editor history (or 30 with Deluxe). Pressing \"Reset Editor\" will reset everything in the left pane, but it will not wipe history (until it is overwritten by your new changes). Just remember that history is <bold>not persisted</bold> when you reload the page.",
   "resetEditor": "Reset Editor",
-  "resetEditorWarning": "Click to confirm",
-  "resetFinished": "Reset Finished",
+  "resetEditorConfirm": "Are you sure you want to remove all the content in the editor?",
   "nMessage_one": "{{count}} message",
   "nMessage_other": "{{count}} messages",
   "nEmbed_one": "{{count}} embed",
