feat(site): support thread id

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -387,7 +387,11 @@
   "addAction": "Add Action",
   "editComponent": "Edit Component",
   "backup": "Backup",
-  "threadName": "Thread Name",
+  "thread": "Thread",
+  "threadsNote": "Webhooks can create & use threads. <0>How do I use this?</0>",
+  "forumThreadName": "Forum Thread Name",
+  "forumImmutable": "Webhooks cannot change the thread name.",
+  "threadId": "Thread ID",
   "content": "Content",
   "avatarUrl": "Avatar URL",
   "profileImmutable": "Profile info cannot be changed for existing messages.",
