feat(site): confirm backup deletion

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -107,6 +107,9 @@
   "linkEmbeds": "Link Embeds",
   "backups": "Backups",
   "noBackups": "You haven't created any backups.",
+  "deleteBackup": "Delete Backup",
+  "deleteBackupConfirm": "Are you sure you want to delete this backup? This cannot be undone.",
+  "shiftSkipTip": "TIP: Hold down shift to skip this confirmation next time.",
   "import": "Import",
   "importBackups": "Import Backups",
   "export": "Export",
