feat(bot): en-GB customize translation

--- a/packages/bot/src/i18n/en.json
+++ b/packages/bot/src/i18n/en.json
@@ -240,5 +240,6 @@
   "addActions": "Add Actions",
   "noActions": "No actions",
   "manageActions": "Manage Actions",
-  "idUnavailable": "ID unavailable."
+  "idUnavailable": "ID unavailable.",
+  "customize": "Customize"
 }
