feat(bot): delete webhook command

--- a/packages/bot/src/i18n/en.json
+++ b/packages/bot/src/i18n/en.json
@@ -252,5 +252,7 @@
   "noActions": "No actions",
   "manageActions": "Manage Actions",
   "idUnavailable": "ID unavailable.",
-  "customize": "Customize"
+  "customize": "Customize",
+  "gteNMessagesSent_one": "At least {{count}} message sent",
+  "gteNMessagesSent_other": "At least {{count}} messages sent"
 }
