feat(site): view components for a server

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -338,7 +338,11 @@
   "style": "Style",
   "saveDraft": "Save Draft",
   "editMessage": "Edit Message",
-  "componentSaveEditMessageTip": "Tip: If you're only editing flows, you don't need to press Edit Message.",
+  "componentSaveEditMessageTip": "TIP: If you're only editing flows, you don't need to press Edit Message.",
+  "messageComponent": "Message Component",
+  "componentEditShiftSkipTip": "TIP: Hold down shift next time to go straight to the edit page.",
+  "deleteComponent": "Delete Component",
+  "deleteComponentConfirm": "Are you sure you want to delete this $t(component.{{type}}, lowercase)?",
   "embed": "Embed",
   "author": "Author",
   "sidebarColor": "Sidebar Color",
