feat(bot): delete components

--- a/packages/bot/src/i18n/en.json
+++ b/packages/bot/src/i18n/en.json
@@ -32,6 +32,17 @@
               "description": "The channel that the message is in, for autocomplete results"
             }
           }
+        },
+        "delete": {
+          "description": "Delete a component",
+          "options": {
+            "message": {
+              "description": "Delete a component on this message. A message link is also accepted here"
+            },
+            "channel": {
+              "description": "The channel that the message is in, for autocomplete results"
+            }
+          }
         }
       }
     },
