fix(site): clear created share link

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -22,6 +22,7 @@
   "expiresIn": "Expires {{0}}",
   "shareExpired": "Invalid Share Link",
   "generate": "Generate",
+  "clear": "Clear",
   "copy": "Copy",
   "copyLink": "Copy Link",
   "clickGenerate": "Press \"Generate\" to generate a share link",
