--- a/packages/bot/src/i18n/en.json
+++ b/packages/bot/src/i18n/en.json
@@ -266,6 +266,7 @@
   "noMigratableComponents": "This message has no registered, migratable components.",
   "noContentAvailable": "No content available",
   "noComponentFlow": "There was no flow registered for this component. Configure one [here]({{url}}).",
+  "componentWillExpire": "Please finish editing & submit this component within 2 weeks or the draft will be deleted.",
   "toggledRole": "Toggled the {{role}} role for you.",
   "welcomerCommandDeprecated": "In order to set up a welcomer, please use the **/triggers** command.",
   "noTrigger": "This server has no trigger with that name.",
