chore(site): consolidate, rearrange editor buttons

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -85,7 +85,7 @@
   "editor": "Editor",
   "preview": "Preview",
   "previewAll": "Preview All",
-  "saveMessage": "Save Message",
+  "saveMessage": "Save/Share",
   "addMessage": "Add Message",
   "developer": "Developer",
   "jsonEditor": "JSON Editor",
