feat(site): text copy feedback

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -24,6 +24,7 @@
   "generate": "Generate",
   "clear": "Clear",
   "copy": "Copy",
+  "copied": "Copied",
   "copyLink": "Copy Link",
   "clickGenerate": "Press \"Generate\" to generate a share link",
   "includeWebhookUrls": "Include webhook URLs",
