feat(site): check/stop UI

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -370,6 +370,7 @@
     "0": "Do nothing",
     "1": "Wait for X seconds",
     "2": "Check",
+    "11": "Stop",
     "3": "Add role",
     "4": "Remove role",
     "5": "Toggle role",
@@ -378,6 +379,24 @@
     "8": "Create thread",
     "9": "Set variable",
     "10": "Delete message"
+  },
+  "actionTypeUnsupported": "It looks like this action type is unsupported. Try refreshing the page.",
+  "checkFunctionTypeText": "Function",
+  "checkFunctionThen": "If the function passes:",
+  "checkFunctionElse": "Otherwise, if the function does not pass:",
+  "checkInElement": "Element:",
+  "checkInArray": "Contained within JSON-formatted array:",
+  "addCondition": "Add Condition",
+  "checkEqualA": "This value (A):",
+  "checkEqualB": "Equal to this value (B):",
+  "checkEqualLoose": "Loose equality (not recommended)",
+  "stopMessageNote": "Stop actions can optionally show a message to the user. These messages can be <0>formatted</0> like normal message actions.",
+  "checkFunctionType": {
+    "0": "AND",
+    "1": "OR",
+    "3": "NOT",
+    "4": "IN",
+    "5": "EQUALS"
   },
   "actionDescription": {
     "1": "Wait for {{ action.seconds }} seconds",
@@ -413,6 +432,7 @@
   "noForumWebhooks": "None of your webhooks are in a thread-only channel, so a thread name cannot be set.",
   "threadId": "Thread ID",
   "content": "Content",
+  "contentOptional": "Content (optional)",
   "avatarUrl": "Avatar URL",
   "profileImmutable": "Profile info cannot be changed for existing messages.",
   "filesCount": "Files ({{ count }}/10)",
