feat(site): add missing embed i18n keys

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -352,19 +352,37 @@
   "deleteComponent": "Delete Component",
   "deleteComponentConfirm": "Are you sure you want to delete this $t(component.{{type}}, lowercase)?",
   "embed": "Embed",
+  "embedN": "Embed {{n}}",
+  "embedNText": "Embed {{n}} - {{text}}",
   "author": "Author",
+  "authorUrl": "Author URL",
+  "iconUrl": "Icon URL",
   "sidebarColor": "Sidebar Color",
   "clickToSet": "Click to Set",
   "provider": "Provider",
   "providerUrl": "Provider URL",
   "body": "Body",
   "title": "Title",
+  "titleUrl": "Title URL",
   "redirectUrl": "Redirect URL",
   "remove": "Remove",
   "images": "Images",
+  "largeImageUrl": "Large Image URL",
+  "thumbnailUrl": "Thumbnail URL",
+  "galleryImageN": "Gallery Image {{n}}",
   "useLargeImages": "Use large images",
   "addImage": "Add Image",
+  "addAnother": "Add Another",
+  "fields": "Fields",
+  "fieldN": "Field {{n}}",
+  "fieldNText": "Field {{n}} - {{text}}",
+  "addField": "Add Field",
+  "inline": "Inline",
   "video": "Video",
+  "footer": "Footer",
+  "text": "Text",
+  "date": "Date",
+  "timeText": "Time",
   "actionTypeText": "Action Type",
   "actionType": {
     "0": "Do nothing",
