feat(site): copy webhook url button

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -81,6 +81,7 @@
   "addWebhook": "Add Webhook",
   "createWebhook": "Create Webhook",
   "editWebhook": "Edit Webhook",
+  "copyWebhookUrl": "Copy URL (advanced)",
   "createdByDiscohook": "This webhook is owned by Discohook",
   "selectWebhookGuildNote": "Select a server that Discohook Utils is in to view its webhooks, or create a new webhook in any of your servers by clicking the button below.",
   "selectWebhookGuildNoWebhooks": "The server you selected has no webhooks that Discohook Utils could access. Try creating a new one with the button below.",
