refactor(site): split share & backups

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -23,6 +23,7 @@
   "expiresIn": "Expires {{0}}",
   "shareExpired": "Invalid Share Link",
   "generate": "Generate",
+  "regenerate": "Re-Generate",
   "clear": "Clear",
   "copy": "Copy",
   "copied": "Copied",
@@ -30,10 +31,10 @@
   "clickGenerate": "Press \"Generate\" to generate a share link",
   "includeWebhookUrls": "Include webhook URLs",
   "options": "Options",
-  "manageBackups": "Visit your user page to manage backups.",
+  "manageBackups": "Visit your user page to import, export, and manage backups.",
   "logInToSaveBackups": "Log in to save permanent backups.",
   "savedAutomatically": "Saved automatically",
-  "saveBackup": "Save Backup",
+  "createBackup": "Create Backup",
   "sendMessageN_one": "Send Message",
   "sendMessageN_other": "Send Messages",
   "messages": "Messages",
@@ -90,7 +91,8 @@
   "editor": "Editor",
   "preview": "Preview",
   "previewAll": "Preview All",
-  "saveMessage": "Save/Share",
+  "share": "Share",
+  "shareMessage": "Share Message",
   "addMessage": "Add Message",
   "developer": "Developer",
   "jsonEditor": "JSON Editor",
