--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -103,7 +103,7 @@
   "use": "Use",
   "embedExample": "Example",
   "previewInfo": "Preview Info",
-  "editingBackupNote": "You're editing a backup, so your work is saved periodically while you edit. In order to share this message with others, use the \"Save Message\" button.",
+  "editingBackupNote": "You're editing a backup, so your work is saved periodically while you edit. In order to share this message with others, use the \"$t(share)\" button.",
   "editingLinkBackupNote": "You're editing a backup, so your work is saved periodically while you edit.",
   "linkEmbedCacheNote": "Discord caches link embeds for 30 minutes. <0>Copy this partially randomized link</0> to force Discord to re-fetch the data. Link embeds are not updated for past messages (you need to edit the message).",
   "channel": "Channel",
