--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -120,6 +120,9 @@
   "deleteLinkBackupConfirm": "Are you sure you want to delete this link embed? This cannot be undone.",
   "backups": "Backups",
   "noBackups": "You haven't created any backups.",
+  "openBackupLoad": "Start editing this backup without opening a new tab",
+  "openBackupClone": "Clone this backup and load the duplicated data in the current tab",
+  "openBackupNewTab": "Open this backup in a new tab",
   "deleteBackup": "Delete Backup",
   "deleteBackupConfirm": "Are you sure you want to delete this backup? This cannot be undone.",
   "shiftSkipTip": "TIP: Hold down shift to skip this confirmation next time.",
