feat(site): move & redesign clear all button

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -494,9 +494,11 @@
   },
   "history": "History",
   "noHistory": "This editor session has no history recorded.",
-  "historyNote": "Here you can view and manage the past 15 autosaved instances of editor history (or 30 with Deluxe). Pressing \"Reset Editor\" will reset everything in the left pane, but it will not wipe history (until it is overwritten by your new changes). Just remember that history is <bold>not persisted</bold> when you reload the page.",
-  "resetEditor": "Reset Editor",
-  "resetEditorConfirm": "Are you sure you want to remove all the content in the editor?",
+  "historyNote": "Here you can view and manage the past 15 autosaved instances of editor history (or 30 with Deluxe). History <bold>does not persist</bold> when you reload the page!",
+  "resetEditor": "Clear All",
+  "resetEditorConfirm_one": "This will delete all of the content in {{count}} message. Are you sure you want to do that?",
+  "resetEditorConfirm_other": "This will delete all of the content in {{count}} messages. Are you sure you want to do that?",
+  "resetEditorFootnote": "If you ever do this by mistake, you may be able to find your lost data in the <0>history menu</0>.",
   "nMessage_one": "{{count}} message",
   "nMessage_other": "{{count}} messages",
   "nEmbed_one": "{{count}} embed",
