--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -498,6 +498,7 @@
   "resetEditor": "Clear All",
   "resetEditorConfirm_one": "This will delete all of the content in {{count}} message. Are you sure you want to do that?",
   "resetEditorConfirm_other": "This will delete all of the content in {{count}} messages. Are you sure you want to do that?",
+  "resetEditorConfirmEmbed": "This will delete all of the content in one link embed. Are you sure you want to do that?",
   "resetEditorFootnote": "If you ever do this by mistake, you may be able to find your lost data in the <0>history menu</0>.",
   "nMessage_one": "{{count}} message",
   "nMessage_other": "{{count}} messages",
